<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.yuechengshi.day18hw2.MainActivity">

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="209dp"
        android:layout_height="193dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.446"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.711"
        tools:ignore="ExtraText">

        <Button
            android:id="@+id/seven"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="0"
            android:onClick="btnClick"

            android:text="@string/seven" />

        <Button
            android:id="@+id/eight"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="0"
            android:onClick="btnClick"
            android:text="@string/eight" />


        <Button
            android:id="@+id/nine"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_row="0"
            android:onClick="btnClick"
            android:text="@string/nine" />


        <Button
            android:id="@+id/four"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="1"
            android:onClick="btnClick"
            android:text="@string/four" />


        <Button
            android:id="@+id/five"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="1"
            android:onClick="btnClick"
            android:text="@string/five" />


        <Button
            android:id="@+id/six"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_row="1"
            android:onClick="btnClick"
            android:text="@string/six" />


        <Button
            android:id="@+id/one"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="2"
            android:onClick="btnClick"
            android:text="@string/one" />


        <Button
            android:id="@+id/zero"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_row="3"
            android:onClick="btnClick"
            android:text="@string/zero"
            tools:layout_editor_absoluteX="224dp"
            tools:layout_editor_absoluteY="316dp" />

        <Button
            android:id="@+id/two"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="2"
            android:onClick="btnClick"
            android:text="@string/two" />

        <Button
            android:id="@+id/three"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_row="2"
            android:onClick="btnClick"
            android:text="@string/three" />

        <Button
            android:id="@+id/enter"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="3"
            android:onClick="btnClick"
            android:text="@string/enter" />

        <Button
            android:id="@+id/back"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="3"
            android:onClick="btnClick"
            android:text="@string/back" />


    </GridLayout>

    <LinearLayout
        android:layout_width="306dp"
        android:layout_height="62dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.117">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.41"
            android:contentDescription="@string/textView2"
            tools:ignore="DuplicateIds" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.78"
            android:contentDescription="@string/textView10" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.34"
            android:contentDescription="@string/textView11" />

    </LinearLayout>


</android.support.constraint.ConstraintLayout>
